# OOP_Lab3

./: CMakeLists.txt  ConfigParser.cpp  ConfigParser.h  EditorFactory.cpp  EditorFactory.h  SoundEditor.cpp  SoundEditor.h  WAVChannel.cpp  WAVChannel.h  WAVEditor.h  WAVIO.h  WAVMetaData.cpp  WAVMetaData.h  WAVReader.cpp  WAVReader.h  WAVStructs.h  WAVWriter.cpp  WAVWriter.h  WAVexcepiont.cpp  WAVexcepiont.h  main.cpp
channel/: WAVChannel.cpp  WAVChannel.h  WAVMixer.cpp  WAVMute.cpp
channel/editor/: WAVClip.cpp  WAVClip.h  WAVMixer.cpp  WAVMixer.h  WAVMute.cpp  WAVMute.h
channel/io/: WAVReader.cpp  WAVReader.h  WAVWriter.cpp  WAVWriter.h
data/: WAVMetaData.cpp  WAVMetaData.h
data/chucks/: FMTChunk.cpp  UnknownChunk.cpp
